# spotify-dl-lib

./: Cargo.toml  LICENSE  README.md
src/: channel_sink.rs  download.rs  lib.rs  session.rs  track.rs
src/encoder/: flac.rs  mod.rs  mp3.rs
