[package]
name = "spotify_dl_lib"
version = "0.2.0"
edition = "2021"
description = "A rust library which allows you to download spotify songs if you have a premium account"
repository = "https://github.com/mari-rs/spotify-dl-lib"
license = "MIT"
keywords = ["spotify", "spotifydownloader", "i<3poland"]

[dependencies]
structopt = { version = "0.3", default-features = false }
rpassword = "7.0"
indicatif = "0.17"
librespot = { version = "0.4.2", default-features = false }
tokio = { version = "1.36.0", features = ["full", "tracing"] }
flacenc = "0.4"
audiotags = "0.5"
regex = "1.7.1"
machine-uid = "0.5.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
lazy_static = "1.4"
async-trait = "0.1"
dirs = "5.0"
mp3lame-encoder = { version = "0.1.5", optional = true }
futures = "0.3"
rayon = "1.10"
axum = {version="0.7.4", features = ["ws"]}
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }


[features]
default = ["mp3"]


mp3 = ["dep:mp3lame-encoder"]
